# mtg-rdf

./: .gitignore  README.md  main.py  pyproject.toml
mtg_rdf/: __init__.py  __main__.py  config.py  extractor.py  ingest.py  loader.py  transformer.py
src/: ingest.py  llm.py  loader.py  transformer.py
