[project]
name = "mtg-rdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "docker>=7.1.0",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[project.scripts]
mtg-rdf = "mtg_rdf.__main__:main"

[tool.setuptools]
packages = ["mtg_rdf"]
